[metadata]
name = webrtc
version = 0.1.0

[options]
packages = find:
install_requires =
    setuptools

[options.entry_points]
console_scripts =
    # example: node entry points if you have python nodes
    # webrtc_server = webrtc.server:main

[options.package_data]
# include package files if needed

[tool:pytest]
# your test opts

[install]
# (none)

[develop]
# (none)

[data_files]
# This section is IMPORTANT so launch files land in share/<pkg>/launch
data_files =
    share/ament_index/resource_index/packages/webrtc = resource/webrtc
    share/webrtc/package.xml = package.xml
    share/webrtc/launch/webrtc.launch.py = launch/webrtc.launch.py
